added design documents